--- a/WebContent/WEB-INF/templates/common_header.html
+++ b/WebContent/WEB-INF/templates/common_header.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org">
     <head th:fragment="head_frag(title, meta)">
-        <title th:replace="${title}">盘零零(pan00) - 百度云群组|百度网盘|群组链接|老司机你懂得|实时更新数据</title>
+        <title th:replace="${title}">盘零零(pan00) - 百云群组|百网盘|群组链接|老司机你懂得|实时更新数据</title>
         
         <!--/* Per-page placeholder for additional links */-->
         <th:block th:replace="${meta}" />
