--- a/WebContent/WEB-INF/templates/gogogo.html
+++ b/WebContent/WEB-INF/templates/gogogo.html
@@ -5,8 +5,8 @@
 
     <head th:include="common_header :: head_frag(~{::title},~{::meta})"><!--  th:include="common" -->
         <meta charset="utf-8">
-        <title>盘零零 - 百度云群组|百度网盘|群组链接|老司机你懂得|实时更新数据</title>
-        <meta name="description" content="盘零零 百度云群组 百度网盘 群组链接 老司机你懂得 实时更新数据">
+        <title>盘零零 - 百云群组|百网盘|群组链接|老司机你懂得|实时更新数据</title>
+        <meta name="description" content="盘零零 百云群组 百网盘 群组链接 老司机你懂得 实时更新数据">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
