--- a/WebContent/WEB-INF/templates/index.html
+++ b/WebContent/WEB-INF/templates/index.html
@@ -5,8 +5,8 @@
     
     <head th:include="common_header :: head_frag(~{::title},~{::meta})"><!--  th:include="common" -->
         <meta charset="utf-8">
-        <title>盘零零 - 百度云群组|百度网盘|群组链接|实时更新数据</title>
-        <meta name="description" content="盘零零 百度云群组 百度网盘 群组链接 实时更新数据">
+        <title>盘零零 - 百云群组|百网盘|群组链接|实时更新数据</title>
+        <meta name="description" content="盘零零 百云群组 百网盘 群组链接 实时更新数据">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
@@ -22,9 +22,9 @@
                 <section id="features" class="features" style="font-size: 13px;padding-top:4.000rem;">
 
                 <!-- taobao广告 -->
-                <div style="text-align:center;">
+                <!-- <div style="text-align:center;">
                    <a href="https://s.click.taobao.com/t?e=m%3D2%26s%3D4EWBqfZ%2FROMcQipKwQzePCperVdZeJviLKpWJ%2Bin0XJRAdhuF14FMVrqNPBGU2%2FE1aH1Hk3GeOjy9R216ICpV%2FbNVNuMfjYsjGwPN8hEYH5D8aE2fzxjBgBXgSuv7Sv7G6CrVuDGKz3aoL2q0dojAE4rcRkUpcsQRIhXpwzXCM5Pf2BYFhAHdIU%2BSr7Q5a4CeEV%2BM%2BWE6mcn9HkLJrzYxKznFCNnZ4SntvSSeMsJ9CNpwd9CKOkpCkumytj0ytxMim%2BonJYUxJsMSE4Lfk9a%2FgiFA%2Flhux3tNcwDbqGDeU17eNTRMork7D0FLhAx%2FhvUc%2F%2BA4NJnfKe8Wpk0PfqjFte8J5JntTnRg3E%2FSIGHlhfqhzYjEJkEZB09%2BTEXbhdYF9ur93URWJXGDF1NzTQoPw%3D%3D" target="_blank"><img src="https://img.alicdn.com/tfs/TB1auTgqrPpK1RjSZFFXXa5PpXa-440-180.jpg" style="background-size:contain|cover;width:100%;height:auto;max-height:258px;max-width:1180px;"></a>
-                </div>
+                </div>  -->
 
              <div class="container">
 				        <div class="row">
@@ -177,7 +177,7 @@
                                                     <div class="adv-table">
                                                         <div class="clearfix">
                                                             <div style="color:red;">
-                                                               <h3>3.百度云资源，更多请点击：<a style="color:blue" th:href="@{/ziyuan}">百度云资源</a></h3>
+                                                               <h3>3.百云资源，更多请点击：<a style="color:blue" th:href="@{/ziyuan}">百云资源</a></h3>
                                                             </div>
                                                         </div>
                                                         <div class="space15"></div>
