--- a/WebContent/WEB-INF/templates/index.html
+++ b/WebContent/WEB-INF/templates/index.html
@@ -29,9 +29,9 @@
              <div class="container">
 				        <div class="row">
                     <div class="main_features">
-						                <!-- <div class="f_item_text" style="text-align:center;">
+						                <div class="f_item_text" style="text-align:center;">
 							                    <h3>盘零零 - 中国第零盘</h3>
-						                </div> -->
+						                </div>
 						
 						    <section class="panel" style="">
                                         <div class="panel-body">
@@ -40,7 +40,7 @@
                                                     <div class="adv-table">
                                                         <div class="clearfix">
                                                             <div style="color:red;">
-                                                                <h3>0.分享你的链接，永不和谐：<a style="color:blue" th:href="@{/make}">点击分享</a></h3>
+                                                                <h3>1.分享链接，永远不和谐：<a style="color:blue" th:href="@{/make}">点击分享</a></h3>
                                                             </div>
                                                         </div>
                                                         <div class="space15"></div>
@@ -82,7 +82,7 @@
                                                     <div class="adv-table">
                                                         <div class="clearfix">
                                                             <div style="color:red;">
-                                                                   <h3>1.网盘链接，更多请点击：<a style="color:blue" th:href="@{/wangpan}">网盘链接</a></h3>
+                                                                   <h3>2.网盘链接，更多请点击：<a style="color:blue" th:href="@{/wangpan}">网盘链接</a></h3>
                                                             </div>
                                                         </div>
                                                         <div class="space15"></div>
@@ -134,7 +134,7 @@
                                                     <div class="adv-table">
                                                         <div class="clearfix">
                                                             <div style="color:red;">
-                                                                    <h3>2.云盘链接，更多请点击：<a style="color:blue" th:href="@{/yun}">云盘链接</a></h3>
+                                                                    <h3>3.云盘链接，更多请点击：<a style="color:blue" th:href="@{/yun}">云盘链接</a></h3>
                                                             </div>
                                                         </div>
                                                         <div class="space15"></div>
@@ -177,7 +177,7 @@
                                                     <div class="adv-table">
                                                         <div class="clearfix">
                                                             <div style="color:red;">
-                                                               <h3>3.百云资源，更多请点击：<a style="color:blue" th:href="@{/ziyuan}">百云资源</a></h3>
+                                                               <h3>4.百云资源，更多请点击：<a style="color:blue" th:href="@{/ziyuan}">百云资源</a></h3>
                                                             </div>
                                                         </div>
                                                         <div class="space15"></div>
@@ -220,7 +220,7 @@
                                                     <div class="adv-table">
                                                         <div class="clearfix">
                                                             <div style="color:red;">
-                                                               <h3>4.贴吧链接，更多请点击：<a style="color:blue" th:href="@{/tieba}">贴吧链接</a></h3>
+                                                               <h3>5.贴吧链接，更多请点击：<a style="color:blue" th:href="@{/tieba}">贴吧链接</a></h3>
                                                             </div>
                                                         </div>
                                                         <div class="space15"></div>
@@ -265,7 +265,7 @@
                                                     <div class="adv-table">
                                                         <div class="clearfix">
                                                             <div style="color:red;">
-                                                               <h3>5.贴子链接，更多请点击：<a style="color:blue" th:href="@{/tiezi}">贴子链接</a></h3>
+                                                               <h3>6.贴子链接，更多请点击：<a style="color:blue" th:href="@{/tiezi}">贴子链接</a></h3>
                                                             </div>
                                                         </div>
                                                         <div class="space15"></div>
@@ -316,7 +316,7 @@
                                                     <div class="adv-table">
                                                         <div class="clearfix">
                                                             <div style="color:red;">
-                                                               <h3>6.网红咖姬，更多请点击：<a style="color:blue" th:href="@{/star}">网红咖姬</a></h3>
+                                                               <h3>7.网红咖姬，更多请点击：<a style="color:blue" th:href="@{/star}">网红咖姬</a></h3>
                                                             </div>
                                                         </div>
                                                         <div class="space15"></div>
@@ -360,10 +360,11 @@
                 </div><!-- End off container -->
             </section><!-- End off Featured Section-->
 
-            <!-- scroll up-->
+            <!-- scroll up
             <div class="scrollup">
                 <a href="#"><i class="fa fa-chevron-up"></i></a>
-            </div><!-- End off scroll up -->
+            </div>-->
+            <!-- End off scroll up -->
             
             <div th:include="footer :: copy" ></div>
         </div>
