--- a/WebContent/WEB-INF/templates/common_header.html
+++ b/WebContent/WEB-INF/templates/common_header.html
@@ -9,31 +9,32 @@
 
         <link rel="icon" type="image/png" href="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/images/pan_logo.ico">
 
-        <link rel="stylesheet" href="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/css/swiper.min.css">
         <link rel="stylesheet" href="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/css/animate.css">
         <link rel="stylesheet" href="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/css/iconfont.css">
         <link rel="stylesheet" href="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/css/bootsnav2.css">
-        <link rel="stylesheet" href="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/css/thanks.css">
         
         <!--Theme custom css -->
-        <link rel="stylesheet" href="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/css/style.css">
-        <link href="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/css/style3.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/css/style.css" />
+        <link rel="stylesheet" href="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/css/style3.css" />
         <link rel="stylesheet" href="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/css/responsive.css" />
         
-        <link rel="stylesheet" href="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/css/font-awesome.min.css">
-        <link rel="stylesheet" href="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/css/magnific-popup.css">
+        <!-- <link rel="stylesheet" href="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/css/thanks.css"> -->
+        <!-- <link rel="stylesheet" href="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/css/swiper.min.css"> -->
+        <!-- <link rel="stylesheet" href="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/css/font-awesome.min.css">-->
+        <!-- <link rel="stylesheet" href="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/css/magnific-popup.css"> -->
         <!-- JS includes -->
         <script src="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/js/vendor/jquery-1.11.2.min.js"></script>
         <script src="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/js/vendor/bootstrap.min.js"></script>
         <script src="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/js/jquery.easing.1.3.js"></script>
         <script src="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/js/jquery.collapse.js"></script>
         <script src="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/js/bootsnav.js"></script>
-        <script src="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/js/plugins.js"></script>        
-        <script src="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/js/jquery.magnific-popup.js"></script>
-        <script src="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/js/swiper.min.js"></script>
-        
         <script src="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/js/main.js"></script>
+        
+        <!-- <script src="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/js/plugins.js"></script> -->
+        <!-- <script src="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/js/jquery.magnific-popup.js"></script> -->
+        <!-- <script src="https://pan00-static.oss-cn-shenzhen.aliyuncs.com/assets/js/swiper.min.js"></script> -->
+        
         <script>
         	var _hmt = _hmt || [];
             (function() {
