--- a/WebContent/WEB-INF/templates/common_header.html
+++ b/WebContent/WEB-INF/templates/common_header.html
@@ -44,5 +44,12 @@
                 s.parentNode.insertBefore(hm, s);
             })();
         </script>
+
+        <script type="text/javascript">
+            var sogou_ad_id = 1018829;
+            var sogou_ad_height = 60;
+            var sogou_ad_width = 468;
+        </script>
+        <script type='text/javascript' src='http://images.sohu.com/cs/jsfile/js/c.js'></script>
     </head>
 </html>
