--- a/WebContent/WEB-INF/templates/daohang.html
+++ b/WebContent/WEB-INF/templates/daohang.html
@@ -17,62 +17,46 @@
 
 	<div class="culmn">
             <div th:include="header :: copy"></div> 
-           
+
             <!--Featured Section-->
             <section id="features" class="features" style="font-size: 13px">
                 <div class="container">
-<!-- 				<div th:if="${error} != null"> 
-					<span id="myAlert" class="alert alert-success" style="width: 80%;">
-						<a href="#" class="close" data-dismiss="alert" th:text="${error}">&times;</a> 
-					</span>
-				</div> -->
-
-				<div class="row">
+                    <div class="row">
                         <div class="main_features p-top-100">
-						<form th:action="@{/make/add}" role="form" id="saveform"
-							method="post">
+                            <form role="queryform" name="queryform" id="queryform" method="post">
+                            
+							<!-- <div class="input-group">
+								<span class="input-group-addon">☞</span>
+								<input class="form-control" placeholder="输入简单关键字"
+									type="text" name="keyword" id="keyword" th:value="${keyword}">
+							</div>
+							<div style="text-align: center;">
+							<input class="btn btn-default" type="submit" name="query"
+									onclick="doQuery(true)" value="点我查询" />
+							</div> -->
+							
 							<section class="panel" style="">
-								<div class="panel-body">
-									<div class="tab-content">
-										<div id="about-2" class="tab-pane active">
-											<div class="adv-table">
-												<div class="clearfix">
-													<div style="color: red; text-align: center;">
-														分享你的可用网盘链接！点击就直达，懂你所懂！</div>
-												</div>
-												<div class="form-group form" style="width: 100%;">
-													<label for="name">输入网盘链接short=后面的6-8个字母数字:</label> <input
-														class="form-control" type="text" name="content"
-														id="content" value="">
-												</div>
-												<button class="btn btn-default"
-													style="color: blue; cursor: pointer; font-size: 15px; font-family: 微软雅黑;"
-													th:type="submit"
-													th:onclick="'javascript:return submitFunc()'" value="保存链接">保存链接</button>
-											</div>
-										</div>
-									</div>
-								</div>
-							</section>
-						</form>
-
-						<form role="queryform" name="queryform" id="queryform" method="post">
-                                  <section class="panel" style="">
                                         <div class="panel-body">
                                             <div class="tab-content">
                                                 <div id="about-2" class="tab-pane active">
                                                     <div class="adv-table">
+                                                        <div class="clearfix">
+                                                            <div style="color:red;text-align:center;">
+                                                                   精彩链接，无线资源！点击搜索，懂你所懂！
+                                                            </div>
+                                                        </div>
                                                         <div class="space15"></div>
                                                         <table cellpadding="0" cellspacing="0" border="0" class="display table table-bordered" id="table1" width="100%">
                                                             <thead>
                                                             <tr>
                                                                 <th width="30%">链接</th>
-                                                                <th width="20%">发表</th>
+                                                                <!-- <th width="20%">发表</th> -->
                                                                 <th width="20%">更新</th>
-                                                                <th width="15%">访问</th>
-                                                                <!-- <th width="9%">点赞数</th>
-                                                                <th width="7%">点赞</th> -->
-                                                                <th width="15%">置顶</th>
+                                                                <!-- <th width="13%">热门</th> -->
+                                                                <th width="13%">访问</th>
+                                                                <!-- <th width="10%">点赞数</th>
+                                                                <th width="10%">点赞</th> -->
+                                                                <th width="14%">置顶</th>
                                                             </tr>
                                                             </thead>
                                                             <tbody>
@@ -81,18 +65,19 @@
                                                             </tr>
 														    <tr th:each="lm : ${result}">
 														       <td th:each="entry : ${lm}">
-														          <a style="color:blue" th:href="@{/forward(type=yun,id=${entry.id},name=${entry.panShortLink},gogogo=${entry.panLink})}" th:text="${entry.panShortLink}" target="_brank">pan00</a>
+														          <a style="color:blue" th:href="@{/forward(type=wangzhi_daohang,id=${entry.id},name=${entry.fxName},gogogo=${entry.fxLink})}" th:text="${entry.fxName}" target="_brank">pan00</a>
 														       </td>
-                                                               <td th:each="entry : ${lm}" th:text="${#dates.format(entry.createTime, 'MM-dd HH:mm')}"></td>
+                                                               <!-- <td th:each="entry : ${lm}" th:text="${#dates.format(entry.createTime, 'MM-dd HH:mm')}"></td> -->
                                                                <td th:each="entry : ${lm}" th:text="${#dates.format(entry.updateTime, 'MM-dd HH:mm')}"></td>
+                                                               <!-- <td th:each="entry : ${lm}" th:text="${entry.hot}"> </td> -->
                                                                <td th:each="entry : ${lm}" th:text="${entry.visits}"> </td>
                                                                <!-- <td th:each="entry : ${lm}" th:text="${entry.star}"> </td>
                                                                <td th:each="entry : ${lm}">
-														          <button th:type="button" class="label label-success" th:onclick="'javascript:saveStar(\''+@{/yun/saveStar}+'\',\''+${entry.id}+'\');'">点赞</button>
+														          <button th:type="button" class="label label-success" th:onclick="'javascript:saveStar(\''+@{/tieba/saveStar}+'\',\''+${entry.id}+'\');'">点赞</button>
 														       </td> -->
                                                                <td th:each="entry : ${lm}">
-                                                                  <p th:if="${entry.sort == 1}"><button th:type="button" class="label label-success" th:onclick="'javascript:saveSort(\''+@{/make/saveSort}+'\',\''+${entry.id}+'\');'">置顶</button></p>
-                                                                  <p th:if="${entry.sort gt 1}"><button th:type="button" class="label label-success" th:onclick="'javascript:cancelSort(\''+@{/make/cancelSort}+'\',\''+${entry.id}+'\');'">取消置顶</button></p>
+                                                                  <p th:if="${entry.sort == 1}"><button th:type="button" class="label label-success" th:onclick="'javascript:saveSort(\''+@{/daohang/saveSort}+'\',\''+${entry.id}+'\');'">置顶</button></p>
+                                                                  <p th:if="${entry.sort gt 1}"><button th:type="button" class="label label-success" th:onclick="'javascript:cancelSort(\''+@{/daohang/cancelSort}+'\',\''+${entry.id}+'\');'">取消置顶</button></p>
 														       </td>
 													        </tr>
                                                             </tbody>
@@ -109,39 +94,15 @@
                 </div><!-- End off container -->
             </section><!-- End off Featured Section-->
 
-		<div th:if="${error} != null">
-			<script th:inline="javascript">
-			$(function() {
-				alert([[${error}]]);
-			});
-		</script>
-		</div>
-
-		<!-- scroll up-->
+            <!-- scroll up-->
             <div class="scrollup">
                 <a href="#"><i class="fa fa-chevron-up"></i></a>
             </div><!-- End off scroll up -->
-            
-            <script src='https://www.yzaosite.com/yezi.php?id=22687'></script>
             
             <div th:include="footer :: copy" ></div>
         </div>
     </body>
     <script>
-	function check() {
-		var content = $("#content").val();
-		if (null == content || "" == content.trim()
-				|| content.length<6 || content.length>8) {
-			alert("输入网盘链接short=后面的6-8个字母数字");
-			return false;
-		}
-		return true;
-	}
-
-	function submitFunc() {
-		return check();
-	}
-	
         function saveStar(url,id){
             $.get(url,
                 {
@@ -178,7 +139,7 @@
     			resetPaging();
     		}
     		var contextPath = $('#contextPath').attr('href');
-    		document.queryform.action=contextPath + "make";
+    		document.queryform.action=contextPath + "daohang";
     		document.queryform.submit();
     	}
     </script>
